# ludo_ai

./: .gitignore
ai_player/: CMakeLists.txt  ai_player.cpp  ai_player.h  main.cpp
ludo_game_code/Domain-Code/: main.cpp
